Fix building and pushing bundle

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -60,3 +60,4 @@ jobs:
         run: cd $PROJECT_DIR && make bundle bundle-build bundle-push
         env:
           BUNDLE_IMG: ${{ env.REGISTRY_URL }}/${{ env.ORG }}/${{ env.REPO_BUNDLE_IMAGE }}:${{ github.ref_name }}
+          PROJECT_DIR: ${{ env.REPO_IMAGE }}
